--- a/404.html
+++ b/404.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <link rel="shortcut icon" href="/src/assets/images/icons/pm.png" />
-  <title>Paul Mardling's Portfolio</title>
+  <link rel="shortcut icon" href="/src/assets/images/icons/cg.png" />
+  <title>Claudia Guida's Portfolio</title>
   <script src="https://use.fontawesome.com/9c2b1b55c2.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Lato|Raleway+Dots|Raleway:100,400,700" rel="stylesheet">
+
 </head>
 <body>
   <div id="root">
